--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            <h2>
             na PHPJobs
            </h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam rerum ea numquam omnis dolores sed quod ipsam sit hic blanditiis facere vel, reprehenderit praesentium laboriosam non, cumque molestias voluptate accusamus.</p>
+            <p>Se inscreva na empresa que promete tranformar sua experiência com sites pessoal e profissionalmente.</p>
         </div>
        
           <form>
