Update PHP Jobs serviços.html

--- a/PHP Jobs serviços.html
+++ b/PHP Jobs serviços.html
@@ -53,7 +53,7 @@
         <div class="card-text">
             <h3>Vendas</h3>
             <p>Modelo de site para realizar e impulsionar Vendas.</p>
-            <button class="card-button">Ver agora</button>
+            <a href="https://thephpjobs.github.io/Evil-sio-Moda-Feminina/">button class="card-button">Ver agora</button></a>
         </div>
     </div>
     
@@ -65,7 +65,7 @@
         <div class="card-text">
             <h3>Página inicial + Menu</h3>
             <p>Um modelo de site extremamente completo.</p>
-            <button class="card-button" >Ver agora</button>
+            <a href="https://thephpjobs.github.io/Sapore-di-Casa/"><button class="card-button" >Ver agora</button></a>
         </div>
     </div>
 
