--- a/PHP Jobs serviços.html
+++ b/PHP Jobs serviços.html
@@ -53,7 +53,7 @@
         <div class="card-text">
             <h3>Vendas</h3>
             <p>Modelo de site para realizar e impulsionar Vendas.</p>
-            <a href="https://thephpjobs.github.io/Evil-sio-Moda-Feminina/">button class="card-button">Ver agora</button></a>
+            <a href="https://thephpjobs.github.io/Evil-sio-Moda-Feminina/"> <button class="card-button">Ver agora</button></a>
         </div>
     </div>
     
